# joint_visual_attention_model

./: README.md
gaze/: CMakeLists.txt  package.xml
gaze/cfg/: stereo_calibration_parameters.yaml
gaze/src/: probabilityMapHD.cpp
integrate/: CMakeLists.txt  package.xml
integrate/launch/: bag_gaze.launch  bag_pointing.launch  bag_total.launch
integrate/src/: integrate.cpp
pointing/: CMakeLists.txt  package.xml
pointing/src/: create_pointing_map.cpp  hand_node.cpp
saliency_detection/: CMakeLists.txt  package.xml
saliency_detection/include/: cvgabor.h  saliencyDetectionHou.h  saliencyDetectionItti.h
saliency_detection/src/: cvgabor.cpp  saliencyDetectionHou.cpp  saliencyDetectionItti.cpp
segmentation3d/: package.xml
segmentation3d/src/: segment_scene.cpp
