<?xml version="1.0"?>
<package>
  <name>pointing_direction</name>
  <version>0.0.0</version>
  <description> With mouse publishes gaze </description>
  <maintainer email="jfmdomhof@gmail.com">Joris Domhof</maintainer>
  <license>GPL</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
