<package>
  <name>saliency_detection</name>
  <version>0.0.0</version>
  <description>saliency_detection</description>
  <maintainer email="jorisdomhof@hotmail.com">joris</maintainer>
  <author>Joris van de Weem</author>
  <license>GPL</license>
  <url>http://ros.org/wiki/saliency_detection</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  
</package>
